[package]
name = "rust-project-starter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
serde_json = "1"
serde = { version="1"}
serde_derive = { version="1"}

# Axum framework
axum = { version="0.6.18" }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["json", "env-filter"] }

# LRU Cache
caches = {version = "0.2.0", features = ["core"]}